add handsup list, activate-inactivate hundsup button, add elapsed time to list

--- a/src/App.css
+++ b/src/App.css
@@ -523,3 +523,8 @@ select {
   background-color: #45a049;
   transform: scale(1.1);
 }
+
+.button-press-list ul {
+  list-style: none;
+  padding: 0;
+}
